--- a/app/src/main/res/layout/page_game.xml
+++ b/app/src/main/res/layout/page_game.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="@string/game_Instructions_Text"
+        android:textAlignment="center"
+        android:textColor="#558B2F"
+        android:textSize="20sp"
+        android:textStyle="italic" />
+
+    <Button
+        android:id="@+id/button1"
+        style="@style/ButtonLayout"
+        android:text="@string/button_one"
+        android:onClick="option_one_Click"/>
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/ButtonLayout"
+        android:text="@string/button_2"
+        android:onClick="option_two_Click"/>
+
+    <Button
+        android:id="@+id/button3"
+        style="@style/ButtonLayout"
+        android:text="@string/button_3"
+        android:onClick="option_three_Click"/>
+
 
 </LinearLayout>
